--- a/TheraPose/app/requirements.txt
+++ b/TheraPose/app/requirements.txt
@@ -1,6 +1,8 @@
 numpy==1.21.1
 opencv-python==4.7.0.72
 opencv-contrib-python==4.6.0.66
+python-decouple==3.8
+python-dotenv==1.0.1
 CTkListbox==1.2
 customtkinter==5.1.3
 matplotlib==3.7.1
